# PassGPy

./: Dockerfile  README.md  pyproject.toml  requirements.txt  shell.nix
sources/: commands.py
src/passg/: __main__.py  commands.py  window.py
tests/: test_cli.py
