[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]

name= "passgpy"

version= "0.0.2"
authors= [
    { name="iaguinho1727", email="iago.arantes1727@gmail.com" }
]
description="A very simple and minimal password generator CLI Program"
classifiers=[
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Utilities"


]

keywords= [ "typer", "password", "generator", "utility","console"]
maintainers=[
    { name="iaguinho1727",email="iago.arantes1727@gmail.com"}
]
dependencies=[
    "click==8.1.8",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "Pygments==2.19.2",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "typer==0.12.3",
    "typing_extensions==4.15.0"
]
readme= "README.md"
requires-python= ">=3.0"
license="GPL-3.0-or-later"
license-files = [ "LICENSE" ]

[project.scripts]
passg="passg.__main__:start"

[project.urls]

GitHub= "https://github.com/iaguinho1727/PassGPy"